modify first page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-"Hello world" 
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>first github io page</title>
+	</head>
+	<body>
+		<h1>Hi! my name is yuanyu!</h1>
+	</body>
+</html>
