change last date

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ h4 span:first-child {
 				<h4 class="strike-through">
 					<span>Gorilla Tech</span>
 					<span class="date">
-						2016-07-25 — 2016-12-23
+						2016-07-25 — now
 					</span>
 				</h4>
 				<div class="website pull-right">
