--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <h4 class="strike-through">
-                            <span>National Chung Tung University</span>
+                            <span>National Chiao Tung University</span>
                             <span class="date">
 						2010-09-01 — 2012-09-01
 					</span>
