--- a/index.html
+++ b/index.html
@@ -325,10 +325,33 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <h4 class="strike-through">
+                            <span>CoolbitX</span>
+                            <span class="date">
+						        2017-10-15 — till Now
+					        </span>
+                        </h4>
+                        <div class="website pull-right">
+                            <a href="https://coolwallet.io/">CoolbitX</a>
+                        </div>
+                        <div class="position">
+                            Web developer
+                        </div>
+                        <div class="summary">
+                            <p>A web developer to maintain and revised original system. And design some machanism to maintain the app states.</p>
+                        </div>
+                        <h4>Highlights</h4>
+                        <ul class="highlights">
+                            <li class="bullet">Construct a restful api server for bitcoin resources</li>
+                            <li class="bullet">Construct a OTA server for coolWallet to update Fireware</li>
+                            <li class="bullet">Develop Web Extension to use for ERC20 exchange</li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-12">
+                        <h4 class="strike-through">
                             <span>Gorilla Tech</span>
                             <span class="date">
-						2016-07-25 — till Now
-					</span>
+						        2016-07-25 — 2017-10-10
+					        </span>
                         </h4>
                         <div class="website pull-right">
                             <a href="https://www.gorilla-technology.com/zh-TW">https://www.gorilla-technology.com/zh-TW</a>
