--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             <div class="col-sm-9">
                 <p>Json Liang graduated from NCTU with master degree in Computer Science, study for Image Preprocesing with OpenCV library. First year after graduation, worked as firmware engineer at ASUS. However, with great interest with Web development,
                     I applied another job on web development at SYSCOM. With many web develop technque improve, the web develop need to integrate with both frontend and backend. Use nodejs , I could maintain both end with only one language ,namely javascript.
-                    I would like create some fantastic app with a team to make the world more colorful and help people work effeciently. Thus, I am struggle to cultivating my ability to become a fullstack worker.</p>
+                    I would like create some fantastic app with a team to make the world more colorful and help people work efficiently. Thus, I am struggle to cultivating my ability to become a backend worker.</p>
             </div>
         </section>
         <section id="profiles" class="row">
