--- a/index.html
+++ b/index.html
@@ -325,9 +325,35 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <h4 class="strike-through">
+                            <span>RedPill</span>
+                            <span class="date">
+						        2019-11-01 — till now
+					        </span>
+                        </h4>
+                        <div class="website pull-right">
+                            <a href="https://aicast.me/">RedPill</a>
+                        </div>
+                        <div class="position">
+                            Backend and Cloud developer
+                        </div>
+                        <div class="summary">
+                            <p>A Backend Developer to help build license key machanism for  RedPill Studio to let the Service AS SAAS.
+                               Build up the CD flow with github action for autodeploy with version control.
+                            </p>
+                        </div>
+                        <h4>Highlights</h4>
+                        <ul class="highlights">
+                            <li class="bullet">Construct a license key machanism for RedPill Studio</li>
+                            <li class="bullet">Build up rplab.online portal for user to manage their license</li>
+                            <li class="bullet">Build up a lambda function with dynamodb for track usage for aicast</li>
+                            <li class="bullet">Construct the Pay Plan Control System with Paypal</li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-12">
+                        <h4 class="strike-through">
                             <span>CoolbitX</span>
                             <span class="date">
-						        2017-10-15 — till Now
+						        2017-10-15 — 2019-11-01
 					        </span>
                         </h4>
                         <div class="website pull-right">
@@ -343,7 +369,7 @@
                         <ul class="highlights">
                             <li class="bullet">Construct a restful api server for bitcoin resources</li>
                             <li class="bullet">Construct a OTA server for coolWallet to update Fireware</li>
-                            <li class="bullet">Develop Web Extension to use for ERC20 exchange</li>
+                            <li class="bullet">Develop a bridge System with AWS lambda(e.g. Sygna Bridge) for interact with Biance Dapp</li>
                         </ul>
                     </div>
                     <div class="col-sm-12">
