fix hyperlink problem

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                         <ul class="highlights">
                             <li class="bullet">Construct a restful api server for bitcoin resources</li>
                             <li class="bullet">Construct a OTA server for coolWallet to update Fireware</li>
-                            <li class="bullet">Develop a bridge machinism use protocol <a href="https://walletconnect.org/">wallet connect<a> with for CoolWallet to interact with Biance Dapp</li>
+                            <li class="bullet">Develop a bridge machinism use protocol <a href="https://walletconnect.org/">wallet connect</li>a> with for CoolWallet to interact with Biance Dapp</li>
                                 <li class="bullet">Develop a bridge and audit system use aws lambda which is called Sygna bridge  for 2 two Crypto Currency Exchange users to bridge their transactions use Sygna-Bridge  for secure Crypto Currency transactions</li>
                         </ul>
                     </div>
